# Django_Challenge

./: .gitignore  README.md  pyproject.toml
common/: models.py
config/: settings.py  urls.py
tweets/: admin.py  models.py  serializer.py  urls.py  views.py
tweets/migrations/: 0001_initial.py  0002_initial.py  0003_alter_like_created_at_alter_like_tweet_and_more.py  0004_alter_like_user_alter_tweet_payload_alter_tweet_user.py
tweets/templates/: show_tweet_list.html
users/: admin.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py
