[tool.poetry]
name = "django-challenge"
version = "0.1.0"
description = ""
authors = ["luckyseo <ityun777@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
